# skeleton_python

./: .gitignore  README.md  pyproject.toml
.lingma/rules/: code.md  python.md
src/project_name/demo_module/: DemoClass.py
tests/: test_DemoClass.py
