[project]
name = "project-name"
version = "0.1.0"
description = "A skeleton project for demonstration"
authors = [
    {name = "黄文华",email = "18675381281@163.com"}
]
readme = "README.md"

packages = [{ include = "project_name", from = "src" }]

requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
]
